crates/rome_cli/tests/snapshots/should_disable_a_rule_group.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 107
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "js": {
            "recommended": false
        }
    }
  }
}
```

## `fix.js`

```js
try {
    !a && !b;
} catch (err) {
    err = 24;
}

```

## Messages


